// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem component renders menu item with label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuItem
    icon=""
    imageType="type"
    interfaceType=""
    isActive={false}
    label="title"
    menuType="primary"
    onClick={[Function]}
    to="linkyLink"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "activeClassName": "menu__menuitem--active",
      "ariaCurrent": "true",
      "children": Array [
        <Icon
          className=""
          color=""
          name="menu-default-interface"
          style={Object {}}
/>,
        "title",
      ],
      "className": "menu__menuitem menu__menuitem--primary",
      "onClick": [Function],
      "to": "linkyLink",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "color": "",
          "name": "menu-default-interface",
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "title",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "activeClassName": "menu__menuitem--active",
        "ariaCurrent": "true",
        "children": Array [
          <Icon
            className=""
            color=""
            name="menu-default-interface"
            style={Object {}}
/>,
          "title",
        ],
        "className": "menu__menuitem menu__menuitem--primary",
        "onClick": [Function],
        "to": "linkyLink",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "color": "",
            "name": "menu-default-interface",
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "title",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MenuItem component renders menu item with no image 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuItem
    icon=""
    interfaceType=""
    isActive={false}
    label="title"
    menuType="primary"
    onClick={[Function]}
    to="linkyLink"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "activeClassName": "menu__menuitem--active",
      "ariaCurrent": "true",
      "children": Array [
        <Icon
          className=""
          color=""
          name="menu-default-interface"
          style={Object {}}
/>,
        "title",
      ],
      "className": "menu__menuitem menu__menuitem--primary",
      "onClick": [Function],
      "to": "linkyLink",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "color": "",
          "name": "menu-default-interface",
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "title",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "activeClassName": "menu__menuitem--active",
        "ariaCurrent": "true",
        "children": Array [
          <Icon
            className=""
            color=""
            name="menu-default-interface"
            style={Object {}}
/>,
          "title",
        ],
        "className": "menu__menuitem menu__menuitem--primary",
        "onClick": [Function],
        "to": "linkyLink",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "color": "",
            "name": "menu-default-interface",
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "title",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
